Add Nadia image

--- a/people.html
+++ b/people.html
@@ -137,7 +137,7 @@
 
 
             <div class="person col-md-4 col-sm-6 col-xs-12">
-                <img src="/images/Yilun.png"
+                <img src="/imgs/nadia_headshot.png"
                     alt="photo" class="person-photo img-circle">
                 <h3 class="person-role">Nadia Ady</h3>
                 <p class="person-role">Postdoctoral Researcher</p>
