--- a/projects/skateboard.html
+++ b/projects/skateboard.html
@@ -164,6 +164,29 @@
 </head>
 
 <body>
+  <nav class="navbar navbar-default navbar-static-top">
+    <div class="container">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="/"><span class="glyphicon glyphicon-home" aria-hidden="true"></span> Team ARAM</a>
+        </div>
+        <div id="navbar" class="collapse navbar-collapse">
+            <ul class="nav navbar-nav pull-right">
+                <li><a href="/projects.html"><span class="glyphicon glyphicon-apple" aria-hidden="true"></span>  Projects</a></li>
+                <li><a href="/people.html"><span class="glyphicon glyphicon-user" aria-hidden="true"></span>  People</a></li>
+                <li><a href="/publications.html"><span class="glyphicon glyphicon-book" aria-hidden="true"></span>  Publications</a></li>
+                <li><a href="/joinus.html"><span class="glyphicon glyphicon-hand-right" aria-hidden="true"></span>  Join Us</a></li>
+            </ul>
+        </div><!--/.nav-collapse -->
+    </div>
+</nav>
+
+
   <main>
     <h1 style="margin-top: 0;">Online Planning and Control of Physics-Based Skateboarding Animation</h1>
     <div>
