--- a/joinus.html
+++ b/joinus.html
@@ -73,8 +73,8 @@
             <h1>FAQ</h1>
             <h3>How many hours per week do I need to commit?</h3>
             <p>
-                We have 1.5 hours of weekly group meeting on Tuesday mornings, and there are project-specific "whirlpool meetings" that happen according to the schedule agreed by participants (usually 1 hour per week).
-                We are seeking members who will commit to the Tuesday morning meeting as well as at least one whirlpool meeting (e.g. their own project), hence there is around 2.5 hours minimum of required meeting times.
+                We have 1.5 hours of weekly group meeting on Tuesday mornings, and there are project-specific "whirlwind meetings" that happen according to the schedule agreed by participants (usually 1 hour per week).
+                We are seeking members who will commit to the Tuesday morning meeting as well as at least one whirlwind meeting (e.g. their own project), hence there is around 2.5 hours minimum of required meeting times.
             </p>
             <h3>Will I get paid for doing projects with you?</h3>
             <p>
