--- a/people.html
+++ b/people.html
@@ -112,7 +112,7 @@
             
 
             <div class="person col-md-4 col-sm-6 col-xs-12">
-                <img src="/images/Yilun.png"
+                <img src="/imgs/nami_headshot.png"
                     alt="photo" class="person-photo img-circle">
                 <h3 class="person-role">Nami Naziri</h3>
                 <p class="person-role">MSc Thesis Student</p>
