Change title line

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Team ARAM - Animation, Robotics, and Machine Learning</title>
+    <title>Team ARAM - Embodied Intelligence and Computational Necromancy</title>
 
     
     
@@ -49,12 +49,7 @@
                 <li><a href="/projects.html"><span class="glyphicon glyphicon-apple" aria-hidden="true"></span>  Projects</a></li>
                 <li><a href="/people.html"><span class="glyphicon glyphicon-user" aria-hidden="true"></span>  People</a></li>
                 <li><a href="/publications.html"><span class="glyphicon glyphicon-book" aria-hidden="true"></span>  Publications</a></li>
-                <!-- <li><a href="/software.html"><span class="glyphicon glyphicon-floppy-disk" aria-hidden="true"></span>  Software</a></li> -->
-                <!-- <li><a href="/teaching.html"><span class="glyphicons glyphicon-camera" aria-hidden="true"></span>  Teaching</a></li> -->
-                <!-- <li><a href="/photos.html"><span class="glyphicons glyphicon-camera" aria-hidden="true"></span>  Fun</a></li> -->
                 <li><a href="/joinus.html"><span class="glyphicon glyphicon-hand-right" aria-hidden="true"></span>  Join Us</a></li>
-                <!--<li><a href="/contact.html"><span class="glyphicon glyphicon-earphone" aria-hidden="true"></span> contact us</a></li>-->
-                <!--<li><a href="/news/index.html"><span class="glyphicon glyphicon-globe" aria-hidden="true"></span>  News</a></li>-->
             </ul>
         </div><!--/.nav-collapse -->
     </div>
@@ -100,7 +95,7 @@
 
 <h1>About Us</h1>
 <p>
-    Team ARAM is an independent meta-research group studying embodied intelligence, the computational discipline studying systems that engage in a purposeful exchange of energy and information with a physical environment. Our interests span method-centric visual computing topics in character animation, simulated robotics, generative modeling, digital humans, and more. Team ARAM is a counter-culture movement to the prevalent lone-wolfism of the post-COVID academia, founded to promote and facilitate a collaborative research environment for researchers of all levels (BSc/MSc/PhD/postdoc/faculty) in quantitative disciplines.
+    Team ARAM is an independent meta-research group studying embodied intelligence, the computational discipline concerning systems that engage in a purposeful exchange of energy and information with a physical environment. Our interests span method-centric visual computing topics in character animation, simulated robotics, generative modeling, digital humans, and more. Team ARAM is a counter-culture movement to the prevalent lone-wolfism of the post-COVID academia, founded to promote and facilitate a collaborative research environment for researchers of all levels (BSc/MSc/PhD/postdoc/faculty) in quantitative disciplines.
 </p>
 <p>
     We focus on learning and refining the research process, yielding fruits as evidence of growth; we produce exciting visual results, open-source software, high-quality BSc/MSc theses, and papers in peer-reviewed publication venues co-authored by members. We welcome highly-motivated researchers and students who wish to connect, learn, and contribute in our dynamic environment.
