--- a/publications.html
+++ b/publications.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Team ARAM - Animation, Robotics, and Machine Learning</title>
+    <title>Team ARAM - Embodied Intelligence and Computational Necromancy</title>
 
     <!-- CDN for latest core CSS (compiled and minified) -->
     <link rel="stylesheet"
