Change collaboration status of Kristian project

--- a/projects.html
+++ b/projects.html
@@ -106,7 +106,7 @@
         </p>
         <div class="content">
             <br>
-            Kristian Hartikainen (in collaboration with Yuval Tassa) is developing an online planning and control system leveraging MuJoCo MPC to track motion capture with a simulated humanoid character.
+            Kristian Hartikainen is developing an online planning and control system leveraging MuJoCo MPC to track motion capture with a simulated humanoid character.
             The system is performant <em>without</em> motion priors and thus does not require training dynamics or policy models. The system can track the overwhelming majority of motion capture samples in AMASS dataset in a zero-shot fashion.
         </div>
     </div>
