--- a/index.html
+++ b/index.html
@@ -83,6 +83,9 @@
 </script>
 
 <!-- <h1>Welcome to Team ARAM!</h1>  -->
+<p>
+    Team ARAM is an independent meta-research group studying embodied intelligence, the computational discipline concerning systems that engage in a purposeful exchange of energy and information with a physical environment. Our interests span method-centric visual computing topics in character animation, simulated robotics, generative modeling, digital humans, and more.
+</p>
 
 <img src="imgs/kristian/image9.gif" height="130" width="inherit"/>
 <img src="imgs/skateboard_teaser.gif" height="130" width="inherit" />
@@ -95,7 +98,7 @@
 
 <h1>About Us</h1>
 <p>
-    Team ARAM is an independent meta-research group studying embodied intelligence, the computational discipline concerning systems that engage in a purposeful exchange of energy and information with a physical environment. Our interests span method-centric visual computing topics in character animation, simulated robotics, generative modeling, digital humans, and more. Team ARAM is a counter-culture movement to the prevalent lone-wolfism of the post-COVID academia, founded to promote and facilitate a collaborative research environment for researchers of all levels (BSc/MSc/PhD/postdoc/faculty) in quantitative disciplines.
+    Team ARAM is a counter-culture movement to the prevalent lone-wolfism of the post-COVID academia, founded to promote and facilitate a collaborative research environment for researchers of all levels (BSc/MSc/PhD/postdoc/faculty) in quantitative disciplines.
 </p>
 <p>
     We focus on learning and refining the research process, yielding fruits as evidence of growth; we produce exciting visual results, open-source software, high-quality BSc/MSc theses, and papers in peer-reviewed publication venues co-authored by members. We welcome highly-motivated researchers and students who wish to connect, learn, and contribute in our dynamic environment.
