Add billiards project website

--- a/publications.html
+++ b/publications.html
@@ -80,7 +80,20 @@
                                 <em>MSc Thesis, Aalto University (2023)</em> <br> 
                                 [<a href="projects/skateboard/skateboard.html">Project page</a>] [<a href="projects/skateboard/skateboard.pdf">Paper</a>]
                             </td>
+                        </tr>
+                    </table>
+                    <p style="color:#898989;"><b>&nbsp; &mdash; 2022 &mdash; </b></p>
+                    <table border="0" cellpadding="6" cellspacing="10">
+                        <tr>
+                            <td><a href="projects/billiards/billiards.html"><img style="vertical-align:middle" class="img-circle" src="projects/billiards/scoot_thumb.png"  width="200" height="inherit" border="1px" alt="" /></a></td>
+                            <td>
+                                <b>Learning High-Risk High-Precision Motion Control</b> <br> 
+                                Nam Hee Kim, Markus Kirjonen, Perttu Hämäläinen<br> 
+                                <em>ACM SIGGRAPH Conference on Motion Interaction and Games (MIG)</em> <br> 
+                                [<a href="projects/billiards/billiards.html">Project page</a>] [<a href="projects/billiards/billiards.pdf">Paper</a>]
+                            </td>
                         </tr>                                        
+
                     </table>
                 </div>
 
