Add Nadia website

--- a/people.html
+++ b/people.html
@@ -132,9 +132,11 @@
 
 
             <div class="person col-md-4 col-sm-6 col-xs-12">
+                <a href="https://sites.ualberta.ca/~nmady/">
                 <img src="/imgs/nadia_headshot.png"
                     alt="photo" class="person-photo img-circle">
                 <h3 class="person-role">Nadia Ady</h3>
+                </a>
                 <p class="person-role">Postdoctoral Researcher</p>
                 <p class="person-role">Aalto University</p>
             </div>
