Add skateboarding thesis link

--- a/projects/skateboard/skateboard.html
+++ b/projects/skateboard/skateboard.html
@@ -204,8 +204,8 @@
       </figure>
     </p>
     <p style="font-size: 1.4em;">
-      <span style="display: block;"><span style="font-weight: 600;">Paper:</span> <a href="https://arxiv.org/abs/1234asdf">ArXiv</a> </span>
-      <span style="display: block;"><span style="font-weight: 600;">Code:</span> <a href="https://github.com/eliasmikkola/skateboarding">Github</a> </span>
+      <span style="display: block;"><span style="font-weight: 600;">Paper:</span> <a href="https://aaltodoc.aalto.fi/items/3d76eb38-cedf-473b-b19f-e6e9d604215b">AaltoDoc</a> </span>
+      <!-- <span style="display: block;"><span style="font-weight: 600;">Code:</span> <a href="https://github.com/eliasmikkola/skateboarding">Github</a> </span> -->
     </p>
     <p>
       This thesis introduces a simulated system for skateboarding, 
